[project]
name = "social-media-video-downloader"
version = "0.1.0"
description = "Social media downloader API using FastAPI and yt-dlp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "python-dotenv>=1.2.1",
    "yt-dlp>=2025.11.12",
    "yt-dlp-ejs>=0.3.1",
]
